# serde-inline-default

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  publish.yml
examples/: basic.rs  macro_rules.rs  parent_defaults.rs
src/: expand.rs  lib.rs  utils.rs
tests/: enum.rs  struct.rs  test_serde_inline_default.rs
